--- a/package.json
+++ b/package.json
@@ -77,11 +77,17 @@
     "fb": "^2.0.0",
     "fb-node": "^1.0.0",
     "fbgraph": "^1.4.1",
+    "marked": "^0.3.6",
     "materialize-css": "^0.97.8",
+    "moment": "^2.18.1",
     "node-flickr": "^1.0.0",
+    "prop-types": "^15.5.10",
+    "react": "^0.14.9",
+    "react-dom": "^0.14.9",
     "react-grid-gallery": "^0.3.3",
     "react-image-gallery": "^0.8.0",
     "react-images": "^0.5.2",
+    "react-markdown": "^2.5.0",
     "react-youtube": "^7.3.0"
   }
 }
