--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "fbgraph": "^1.4.1",
     "materialize-css": "^0.97.8",
     "node-flickr": "^1.0.0",
+    "react": "^0.14.9",
     "react-grid-gallery": "^0.3.3",
     "react-image-gallery": "^0.8.0",
     "react-images": "^0.5.2",
